# mongo_ops

./: .gitignore  README.md  SECURITY.md
app/backend/: main.py  pyproject.toml
app/backend/models/: APIModel.py  CommonResponse.py  EncryptedMessage.py  __init__.py
app/backend/mongo/: Mongo.md  __init__.py  models.py  mongo.py  mongo_errors.py  mongo_websocket.py
app/backend/security/: __init__.py  auth_token.py  auth_token_errors.py  cipher.py  cipher_errors.py  rate_limiter.py  security.md
app/frontend/: auth.ts  next.config.ts  package-lock.json  package.json
app/frontend/app/: globals.css  page.tsx
app/frontend/components/layout/: index.tsx
app/frontend/components/layout/EllipsesLoader/: EllipsesLoader.module.css  EllipsesLoader.tsx  index.tsx  types.tsx
app/frontend/components/layout/ErrorCallout/: ErrorCallout.module.css  ErrorCallout.tsx  index.tsx  types.tsx
app/frontend/components/layout/InputRow/: InputRow.module.css  InputRow.tsx  index.tsx  types.tsx
app/frontend/components/loaders/: index.tsx
app/frontend/components/loaders/Ellipses/: Ellipses.module.css  Ellipses.tsx  index.tsx
app/frontend/components/loaders/GlowingBall/: GlowingBall.module.css  GlowingBall.tsx  index.tsx
app/frontend/components/original/: header.tsx  mobile-nav.tsx
app/frontend/components/ui/: index.tsx
app/frontend/lib/: crypto-server.ts
app/frontend/types/: next-auth.d.ts  os.ts
docs/: overview.md
docs/backend/: auth-token-layer.md  encription-layer.md  error-handling.md  models.md  mongo-layer.md  mongo-websocket-layer.md
(+23 files in other folders)
